@@ -2,7 +2,7 @@ sdparm (1.05-0.1) unstable; urgency=low
 
   * additions to SAS-2 Enhanced phy control mode page
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Sat, 05 Dec 2009 12:00:00 +0100
+ -- Douglas Gilbert <dgilbert@interlog.com>  Mon, 08 Feb 2009 04:30:00 +0100
 
 sdparm (1.04-0.1) unstable; urgency=low
 
